# open-attribution

./: .dockerignore  .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierrc  404.html  LICENSE.md  README.md  _table = t_env.from_data_stream(imp_ds, table_schema)  app.py  create_clickhouse_tables.py  create_druid_data_sources.py  create_kafka_topics.py  data_flow_diagram.canvas  druid.conf  druid_query_clicks.sql  druid_query_impressions.sql  eslint.config.mjs  index.html  launcher.sh  local.conf  mkdocs.yml  package-lock.json  package.json  process_attribution.sql  project.code-workspace  pyflink_clicks.sql  pyflink_impressions.sql  pyproject.toml  requirements.txt  run_data_generation.py  sitemap.xml  superset_export_and_overwrite.sh  test_clickhouse.py  testdruid_att.py  testflink.py  testquix.py  tmuxlauncher.sh
.github/workflows/: actions-deploy-demo.yml  actions-deploy-docker.yml  actions-deploy-github-pages.yml  actions-deploy-www.yml  actions-docker-build-dash-backend.yml  actions-docker-build-dash-frontend.yml  actions-docker-build-dash.yml  actions-docker-build-postback-api.yml  actions-docker-build-python-api.yml  ci.yml
about/history/: index.html
about/target_use_cases/: index.html
api_app/: __init__.py  models.py
api_app/controllers/: postbacks.py
apps/: mkdoc_hooks.py  mkdocs.yml  mkdocsbase.yml
apps/admin-db/: pg-init.sql
apps/analytics-db/: config.xml
apps/analytics-db/create/: attribute_clicks_mv.sql  attribute_impressions_mv.sql  attribute_installs_mv.sql  attributed_clicks.sql  attributed_clicks_mv.sql  attributed_impressions.sql  attributed_impressions_mv.sql  attributed_installs.sql  attributed_installs_mv.sql  clicks.sql  clicks_mv.sql  clicks_queue.sql  daily_overview.sql  daily_overview_mv.sql  events.sql  events_mv.sql  events_queue.sql  impressions.sql  impressions_mv.sql  impressions_queue.sql  installs_base.sql  installs_base_mv.sql  user_daily_app_opens.sql  user_daily_app_opens_mv.sql  user_daily_events.sql  user_daily_events_attributed.sql  user_daily_events_attributed_mv.sql  user_daily_events_mv.sql  user_dx_activity.sql  user_dx_activity_mv.sql  user_dx_attributed.sql  user_dx_attributed_mv.sql
apps/analytics-db/dev-tools/: reset-db.sh
apps/analytics-db/startup-scripts/: startup.sh
apps/dash/: .env  .env-example  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  test.env
apps/dash-backend/: .dockerignore  Dockerfile.build  Dockerfile.dev  app.py  pyproject.toml
apps/dash-backend/api_app/: models.py
apps/dash-backend/api_app/controllers/: analytics.py  apps.py  networks.py
apps/dash-backend/config/: __init__.py
apps/dash-backend/dash_api/: models.py
apps/dash-backend/dash_api/controllers/: analytics.py  apps.py  links.py  networks.py
apps/dash-backend/dbcon/: __init__.py  connections.py  queries.py
apps/dash-backend/dbcon/sql/: app.sql  app_links.sql  client_domains.sql  delete_app.sql  delete_app_link.sql  delete_client_domain.sql  delete_network.sql  insert_app.sql  insert_app_link.sql  insert_client_domains.sql  insert_network.sql  networks.sql  query_app_history.sql
apps/dash-frontend/: .dockerignore  .gitignore  Dockerfile.build  Dockerfile.dev  components.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
apps/dash-frontend/src/: app.css  app.d.ts  schemas.ts  types.ts
apps/dash/src/: app.html
apps/dash/superset/: superset.db
apps/docs/: index.md
apps/docs/.obsidian/: graph.json  workspace.json
apps/docs/about/: target_use_cases.md
apps/local-dev/: README.md  create_clickhouse_tables.py  create_kafka_topics.py  example_local.conf  launcher.sh  local.conf
apps/postback-api/: .env-examples  Dockerfile.build  Dockerfile.dev  Dockerfile.python  Dockerfile.test  app.py  run_data_generation.py
apps/scripts/: deploy_www.sh
apps/shared/: oa-theme.ts
apps/superset/: __init__.py  cli_superset_config.py  importexport.py  superset.db  superset_config.py  testport.py
apps/www/: .env  .env.production  .gitignore  README.md  custom-server.js  mkdocs-static-asset-plugin.js  my-vite-plugin.js  oa-theme.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
apps/www/src/: app.css  (+1 more)
config/: __init__.py  dimensions.py
docker/: .dev.env  .production.env-example  Dockerfile  Dockerfile.dash  Dockerfile.dash-backend  Dockerfile.dash-frontend  Dockerfile.python  README.md  docker-compose-demo.yml  docker-compose-dev.yml  docker-compose.yml
docker/superset/: docker-bootstrap.sh  docker-init.sh  frontend-mem-nag.sh  run-server.sh
docs/: index.md
docs/about/: history.md
docs/getting_started/: installation.md
getting_started/develop_locally/: index.html
getting_started/installation/: index.html
getting_started/running/: index.html
scripts/: open-attribution-druid.service
search/: search_index.json
sql/: ch_create_table_attributed_mv.sql  ch_create_table_clicks.sql  ch_create_table_clicks_queue.sql  ch_create_table_events.sql  ch_create_table_events_queue.sql  ch_create_table_impressions.sql  ch_create_table_impressions_queue.sql  flink_clicks.sql
sql/create/: attribute_clicks_mv.sql  attribute_default_clicks_mv.sql  attribute_default_impressions_mv.sql  attribute_installs_mv.sql  attributed_clicks.sql  attributed_events.sql  attributed_events_mv.sql  attributed_impressions.sql  attributed_installs.sql  clicks.sql  clicks_queue.sql  daily_overview.sql  daily_overview_attributed_events_mv.sql  daily_overview_attributed_installs_mv.sql  daily_overview_clicks_mv.sql  daily_overview_impressions_mv.sql  daily_overview_mv.sql  events.sql  events_mv.sql  events_queue.sql  impressions.sql  impressions_queue.sql
sql/startup-scripts/: startup.sh
superset/: superset.db  superset_config.py
tests/: _simulate_network_calls.py  devlauncher.sh  generate_321.py  generate_impressions_and_clicks.py  test_installs.py
tests/config/: __init__.py
todo/dash/: index.html
todo/data_flow/: index.html
todo/database_overview/: index.html
todo/db_options/: index.html
todo/todos/: index.html
(+221 files in other folders)
