[project]
authors = [{ name = "James O'Claire" }]
name = "open-attribution"
description = "Tracking for apps and attribution"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pre-commit"]

dependencies = [
    "uvicorn",
    "litestar[standard]",
    "apache-superset",
    "confluent_kafka",
]

[build-system]
requires = ["setuptools", "wheel"]


[tool.ruff]
#select = ["E", "W", "F", "B", "I", "N", "UP"]
select = ["ALL"]

target-version = 'py311'

ignore = [
    "E501",   # line length
    "W291",   # trailing space at end of line
    "G",      # Ignore pyflake logging as it does not like f-strings in log messages.
    "RET504", #Unnecessary assignment to variable before return, but I prefer for readability.
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

fixable = ["ALL"]

exclude = ["tests/*"]

[tool.ruff.lint.per-file-ignores]
"postbacks.py" = ["PLR0913"]


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.sqlfluff.core]
templater = 'placeholder'
verbose = 2
dialect = 'clickhouse'
large_file_skip_byte_limit = 0
exclude_rules = 'AM04'

[tool.sqlfluff.templater.placeholder]
param_style = 'colon'
