[project]
authors = [{ name = "James O'Claire" }]
name = "open-attribution"
description = "Tracking for apps and attribution"
version = "0.0.1"
requires-python = ">= 3.12"

# Project is currently being run with docker, but these are useful for local dev/testing
dependencies = [
    "pandas",
    "litestar[standard]",
    "confluent_kafka",
    "clickhouse_connect",
    "sqlalchemy",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = ["pre-commit"]


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[tool.ruff]
#select = ["E", "W", "F", "B", "I", "N", "UP"]
lint.select = ["ALL"]

target-version = 'py312'

lint.ignore = [
    "E501",    # line length
    "W291",    # trailing space at end of line
    "G",       # Ignore pyflake logging as it does not like f-strings in log messages.
    "RET504",  #Unnecessary assignment to variable before return, but I prefer for readability.
    "D203",
    "D212",
    "PD901",   # Avoid using 'df', but this often is concise and informative when there is only one df in the function
    "PD015",   # I like using pd.merge since it's more declarative for left / right than df.merge
    "PD010",   # I am OK to use .pivot_table
    "PLR0913", # Too many arguments for function call. Good, but for API endpoints it's OK
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
lint.unfixable = ["B"]

lint.fixable = ["ALL"]

exclude = ["tests/*"]


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Ignore missing imports, had trouble getting it to work with sqlalchemy and monorepo?
ignore_missing_imports = true


[tool.sqlfluff.core]
templater = 'placeholder'
verbose = 2
dialect = 'clickhouse'
large_file_skip_byte_limit = 0
exclude_rules = [
    'AM04', # ambiguous columns, ie *. While this should be avoided, there was an unavoidable one in attribute_clicks_mv
    'CP05', #Capitalization of Types, this was causing issues in sqlfluff 3.2, can try removing later
    'CP03', #Capitalization of functions, this was causing issues in sqlfluff 3.2, can try removing later
]


[tool.sqlfluff.templater.placeholder]
param_style = 'colon'
